Endpoints renamed
